app/assets/stylesheets/registry.css
.friendship {
	width: 100%;
	margin: 0 auto;
	background-color: #03C9A9;
	color: #22313F;
	margin-bottom: 20px;
}

.honeymoon-header{
	width: 100%;
	margin: 0 auto;
	background-color: #03C9A9;
	margin-top: 30px;
	margin-bottom: 5px;
}

.registry-box-align {
	margin-left: 80px;
}

#etsy-box {
	padding: 10px;
}

.registry-title {
	padding: 2px;
	color:#D35400;
}

.gifts-story {
	margin-top: 15px;
}

.gifts-story > p {
	font-size: 18px;
}

.input-index {
	margin-right: 50%;
	margin-left: 50%;
}

#dollar-sign {
	font-size: 20px;
	margin-right: 50%;
}

.contribute-btn {
	background-color: #D35400;
	font-size: 30px;
	box-shadow: 5px 5px 5px #95a5a6;
	color: white;
	padding: 10px;
	font-family: 'Cabin', sans-serif;
	margin-bottom: 10px;
	margin-right: 10px;
	width: 95%;
	letter-spacing: 1.3px;
}

.cost {
	font-size: 18px;
	margin-top: 3px; 
}

.items-topmargin {
	margin-top: 20px;
}

.item-title {
	width: 50%;
	margin: 20px auto;
}

.description {
	font-family: 'Cabin', sans-serif;
	font-size: 14px;
	padding: 1em;
}

.zeros {
	font-size: 18px;
	text-align: center;
	padding: 2px;
	margin: 10px 55px 5px 250px;
	width: 50%;
}

.gift-border {
	outline: 1px solid gray;
	box-shadow: 10px 15px 5px #95a5a6;
	margin-bottom: 10px;
	margin-top: 30px;
}

.items-outline {
	outline: 1px solid gray;
	margin-top: 20px;
	box-shadow: 10px 15px 5px #95a5a6;
	height: 370px;
}

.registry-header {
	text-align: center;
	margin-right: 40px;
	padding: 1em;
}

.style_image {
	margin: 10px 60px;
	padding: 2px;
}

